<resources>
    <string name="app_name">Present Express</string>

    <string name="nav_open">Open</string>
    <string name="nav_save">Save</string>
    <string name="started_title">Let\'s get started</string>
    <string name="play_slideshow">Play slideshow</string>
    <string name="use_slide_timings">Use slide timings</string>
    <string name="loop">Loop</string>
    <string name="background_colour">Background colour</string>
    <string name="all_timings">Set all timings</string>
    <string name="title_activity_slideshow">Slideshow</string>
    <string name="title_activity_about">About</string>
    <string name="present_express_logo">Present Express logo</string>
    <string name="present_express">Present Express</string>
    <string name="express_apps_and_j_logos">Express Apps and J logos</string>
    <string name="visit_our_website">Visit our website</string>
    <string name="choose_colour">Choose a colour…</string>
    <string name="select_present">Please select a .present file</string>
    <string name="open_dialog">Opening a file will replace all images in your slideshow. Are you sure?</string>
    <string name="open">Open</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="add_slide">Please add a slide first.</string>
    <string name="set_timings">Set timings (secs)</string>
    <string name="timings_max">Slide timings set to maximum value of 10 seconds.</string>
    <string name="timings_min">Slide timings set to minimum value of 0.5 seconds.</string>
    <string name="timings_error">Couldn\'t set timings. Be sure to enter a decimal value.</string>
    <string name="cancel">Cancel</string>
    <string name="select_images">Select Images</string>
    <string name="unsupported_images">We couldn\'t add some images because they\'re unsupported or exceeded 10MB.</string>
    <string name="unsupported_image">We couldn\'t change that image because it\'s unsupported or exceeds 10MB.</string>
    <string name="only_images">Only image slides can be edited in the mobile app at the moment. Try the desktop version to edit the complete slideshow.</string>
    <string name="document_error">Couldn\'t open that document. Please make sure it\'s a valid .present file.</string>
    <string name="save_error">We couldn\'t save your slideshow. Please try again.</string>
    <string name="change_picture">Change picture</string>
    <string name="move_up">Move up</string>
    <string name="move_down">Move down</string>
    <string name="remove">Remove</string>
    <string name="select_image">Select Image</string>
    <string name="about_present">About Present Express</string>
    <string name="end">Slideshow ended.</string>
    <string name="help_guide">Help guide</string>
    <string name="clear_all_slides">Clear all slides</string>
    <string name="sure_clear">Are you sure you want to clear all slides? This can\'t be undone.</string>
    <string name="corrupted_file">One or more slides couldn\'t be loaded - the file could be corrupted.</string>
    <string name="compat_mode_desc">This is a legacy .present file which doesn\'t support non-image slides in the mobile app. Open and save the file in the latest version of our desktop app to view these slides here.\n\nSaving this legacy file in the mobile app will not include non-image slides.</string>
    <string name="compat_mode">Compatibility mode</string>
    <string name="file_saved">File saved successfully.</string>
    <string name="slideshow_settings">Slideshow settings</string>
    <string name="photo_editor">Photo editor</string>
    <string name="edit_picture">Edit picture</string>
    <string name="show_picture_preview">Show picture preview</string>
    <string name="filters">Filters</string>
    <string name="brightness">Brightness</string>
    <string name="contrast">Contrast</string>
    <string name="rotate_clockwise">Rotate 90° clockwise</string>
    <string name="rotate_anticlockwise">Rotate 90° anticlockwise</string>
    <string name="flip_horizontal">Flip horizontal</string>
    <string name="flip_vertical">Flip vertical</string>
    <string name="reset_all">Reset all</string>
    <string name="greyscale">Greyscale</string>
    <string name="sepia">Sepia</string>
    <string name="black_white"><![CDATA[Black & White]]></string>
    <string name="red_tint">Red Tint</string>
    <string name="blue_tint">Blue Tint</string>
    <string name="green_tint">Green Tint</string>
    <string name="close_editor">Closing photo editor</string>
    <string name="editor_apply_changes">Do you want to apply any changes you\'ve made first?</string>
    <string name="set_transition">Set transition</string>
    <string name="closing_transition_editor">Closing transition editor</string>
    <string name="secs">secs.</string>
    <string name="trans_fade">Fade</string>
    <string name="trans_push">Push</string>
    <string name="trans_wipe">Wipe</string>
    <string name="trans_uncover">Uncover</string>
    <string name="trans_cover">Cover</string>
    <string name="effect_options">Effect options</string>
    <string name="apply_to_all_slides">Apply to all slides</string>
    <string name="trans_smoothly">Smoothly</string>
    <string name="trans_through_black">Through black</string>
    <string name="trans_from_left">From left</string>
    <string name="trans_from_right">From right</string>
    <string name="trans_from_top">From top</string>
    <string name="trans_from_bottom">From bottom</string>
    <string name="transition_duration">Transition duration</string>
    <string name="trans_duration_range">Enter a value from 0.1 to 10 seconds</string>
    <string name="slide_duration_range">Enter a value from 0.5 to 25 seconds</string>
    <string name="add_images">Add images</string>
    <string name="back">Back</string>
    <string name="copyright">Present Express is part of Express Apps copyright © John D</string>
    <string name="done">Done</string>
    <string name="time_spent">Time spent on slide</string>
    <string name="transition">Transition</string>
    <string name="restart_app">Restart the app to apply the changes.</string>
    <string name="interface_theme">Interface theme</string>
    <string name="theme_light">Light mode</string>
    <string name="theme_dark">Dark mode</string>
    <string name="theme_follow">Follow system theme</string>
    <string name="soundtrack_load_error">One or more audio files couldn\'t be loaded in this slideshow\'s soundtrack.</string>
    <string name="title_activity_soundtrack">Soundtrack editor</string>
    <string name="audio_files">Audio files</string>
    <string name="add_audio_files">Add audio files</string>
    <string name="loop_soundtrack">Loop soundtrack</string>
    <string name="soundtrack">Soundtrack</string>
    <string name="play_audio">Play audio</string>
    <string name="slide_options">Slide options</string>
    <string name="closing_soundtrack_editor">Closing soundtrack editor</string>
    <string name="unsupported_audio">We couldn\'t add some audio files because they\'re unsupported or exceeded 15MB.</string>
    <string name="audio_limit_exceeded">We couldn\'t add some audio files because you\'ve exceeded the limit of 10 files.</string>
    <string name="select_audio_files">Select Audio Files</string>
</resources>