<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">


    <com.expressapps.presentexpress.helper.BaseStatusBar
        android:id="@+id/base_status_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/base_status_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:title="@string/slideshow_settings"
            app:navigationIcon="@drawable/icon_back_24"
            app:titleTextColor="@color/colorText"
            app:navigationIconTint="@color/colorText"
            app:navigationContentDescription="@string/back" />

    </com.google.android.material.appbar.AppBarLayout>


    <ScrollView
        android:id="@+id/scroller"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorBackground"
        android:orientation="vertical"
        android:clipToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="20dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/background_button"
                style="@style/SettingsButton"
                android:text="@string/background_colour"
                app:icon="@drawable/icon_circle_24"
                android:onClick="onBackColorClick" />

            <com.google.android.material.button.MaterialButton
                style="@style/SettingsButton"
                android:text="@string/soundtrack"
                app:icon="@drawable/icon_music_24"
                android:onClick="onSoundtrackClick" />

            <com.google.android.material.button.MaterialButton
                style="@style/SettingsButton"
                android:text="@string/all_timings"
                app:icon="@drawable/icon_clock_24"
                android:onClick="onSetTimingsClick" />

            <com.google.android.material.button.MaterialButton
                style="@style/SettingsButton"
                android:text="@string/clear_all_slides"
                app:icon="@drawable/icon_delete_24"
                android:onClick="onClearSlidesClick" />

            <View
                android:layout_marginVertical="15dp"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimary"
                android:layout_marginHorizontal="25dp" />

            <com.google.android.material.checkbox.MaterialCheckBox
                style="@style/SettingsCheckBox"
                android:id="@+id/loop_check"
                android:text="@string/loop"
                android:onClick="onLoopClick" />

            <com.google.android.material.checkbox.MaterialCheckBox
                style="@style/SettingsCheckBox"
                android:id="@+id/timing_check"
                android:text="@string/use_slide_timings"
                android:onClick="onUseTimingsClick" />

            <View
                android:layout_marginVertical="15dp"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimary"
                android:layout_marginHorizontal="25dp" />

            <com.google.android.material.button.MaterialButton
                style="@style/SettingsButton"
                android:id="@+id/theme_button"
                android:text="@string/interface_theme"
                app:icon="@drawable/icon_design_24"
                android:onClick="onThemeClick" />

            <com.google.android.material.button.MaterialButton
                style="@style/SettingsButton"
                android:text="@string/about_present"
                app:icon="@drawable/icon_info_24"
                android:onClick="onAboutClick" />

            <com.google.android.material.button.MaterialButton
                style="@style/SettingsButton"
                android:text="@string/help_guide"
                app:icon="@drawable/icon_help_24"
                android:onClick="onHelpClick" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>