<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransitionActivity">


    <com.expressapps.presentexpress.helper.BaseStatusBar
        android:id="@+id/base_status_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/base_status_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:title="@string/set_transition"
            app:navigationIcon="@drawable/icon_back_24"
            app:titleTextColor="@color/colorText"
            app:navigationIconTint="@color/colorText"
            app:navigationContentDescription="@string/back" />

    </com.google.android.material.appbar.AppBarLayout>


    <ScrollView
        android:id="@+id/scroller"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorBackground"
        android:orientation="vertical"
        android:clipToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/duration_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:hint="@string/time_spent"
                app:helperText="@string/slide_duration_range"
                app:suffixText="@string/secs">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:importantForAutofill="no"
                    android:textColor="@color/colorText" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_marginVertical="15dp"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimary"
                android:layout_marginHorizontal="25dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:paddingVertical="10dp"
                android:labelFor="@+id/transition_group"
                android:text="@string/transition"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBackground"
                android:paddingHorizontal="25dp"
                android:clipToPadding="false"
                android:fillViewport="true">

                <com.google.android.material.button.MaterialButtonGroup
                    android:id="@+id/transition_group"
                    style="@style/Widget.Material3.MaterialButtonGroup.Connected"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/fadetrans"
                        android:text="@string/trans_fade"
                        android:checkable="true"
                        android:onClick="onTransitionButtonClick"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/pushtrans"
                        android:text="@string/trans_push"
                        android:checkable="true"
                        android:onClick="onTransitionButtonClick"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/wipetrans"
                        android:text="@string/trans_wipe"
                        android:checkable="true"
                        android:onClick="onTransitionButtonClick"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/uncovertrans"
                        android:text="@string/trans_uncover"
                        android:checkable="true"
                        android:onClick="onTransitionButtonClick"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/covertrans"
                        android:text="@string/trans_cover"
                        android:checkable="true"
                        android:onClick="onTransitionButtonClick"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </com.google.android.material.button.MaterialButtonGroup>

            </HorizontalScrollView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:visibility="gone"
                android:paddingTop="15dp"
                android:paddingBottom="5dp"
                android:text="@string/effect_options"
                android:textColor="@color/colorText"
                android:id="@+id/effect_spinner_lbl"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/fade_options"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/effect_options">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/fade_smoothly"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/trans_smoothly"
                    android:textSize="16sp"
                    android:paddingStart="10dp"
                    tools:ignore="RtlSymmetry" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/through_black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/trans_through_black"
                    android:textSize="16sp"
                    android:paddingStart="10dp"
                    tools:ignore="RtlSymmetry" />

            </RadioGroup>

            <RadioGroup
                android:id="@+id/movement_options"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/effect_options">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/from_left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/trans_from_left"
                    android:textSize="16sp"
                    android:paddingStart="10dp"
                    tools:ignore="RtlSymmetry" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/from_right"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/trans_from_right"
                    android:textSize="16sp"
                    android:paddingStart="10dp"
                    tools:ignore="RtlSymmetry" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/from_top"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/trans_from_top"
                    android:textSize="16sp"
                    android:paddingStart="10dp"
                    tools:ignore="RtlSymmetry" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/from_bottom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/trans_from_bottom"
                    android:textSize="16sp"
                    android:paddingStart="10dp"
                    tools:ignore="RtlSymmetry" />

            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/transition_duration_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:hint="@string/transition_duration"
                app:helperText="@string/trans_duration_range"
                app:suffixText="@string/secs"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:importantForAutofill="no"
                    android:textColor="@color/colorText" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_marginVertical="15dp"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimary"
                android:layout_marginHorizontal="25dp" />

            <com.google.android.material.button.MaterialButton
                style="@style/SettingsButton"
                android:text="@string/apply_to_all_slides"
                app:icon="@drawable/icon_done_all_24"
                android:onClick="onApplyAllClick" />

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:onClick="onFabClick"
        app:icon="@drawable/icon_check_24"
        android:text="@string/done"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>