<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_open"
            android:icon="@drawable/ic_round_folder_24"
            android:title="@string/nav_open"
            app:showAsAction="always" />

        <item
            android:id="@+id/nav_save"
            android:icon="@drawable/ic_round_save_24"
            android:title="@string/nav_save"
            app:showAsAction="always"/>

        <item
            android:id="@+id/nav_options"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/slideshow_settings"
            app:showAsAction="always"/>
    </group>

</menu>