<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">


    <com.expressapps.presentexpress.helper.BaseStatusBar
        android:id="@+id/base_status_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/base_status_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:title="@string/title_activity_about"
            app:navigationIcon="@drawable/icon_back_24"
            app:titleTextColor="@color/colorText"
            app:navigationIconTint="@color/colorText"
            app:navigationContentDescription="@string/back" />

    </com.google.android.material.appbar.AppBarLayout>


    <ScrollView
        android:id="@+id/scroller"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorBackground"
        android:orientation="vertical"
        android:clipToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="20dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginVertical="15dp"
                android:contentDescription="@string/present_express_logo"
                android:src="@drawable/present_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/present_express"
                android:textFontWeight="600"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textColor="@color/colorDark"
                android:layout_gravity="center"
                tools:targetApi="28" />

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="30dp"
                android:text=""
                android:textAlignment="center"
                android:layout_gravity="center" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/expressj"
                android:contentDescription="@string/express_apps_and_j_logos" />

            <TextView
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="20dp"
                android:text="@string/copyright"
                android:textAlignment="center" />

            <View
                android:layout_marginVertical="15dp"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimary"
                android:layout_marginHorizontal="25dp" />

            <com.google.android.material.button.MaterialButton
                style="@style/SettingsButton"
                android:text="@string/visit_our_website"
                app:icon="@drawable/icon_info_24"
                android:onClick="onWebsiteClick" />

            <com.google.android.material.button.MaterialButton
                style="@style/SettingsButton"
                android:text="@string/help_guide"
                app:icon="@drawable/icon_help_24"
                android:onClick="onHelpClick" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>